kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mmo-game
  namespace: mmo-system
  labels:
    app: mmo
    release: production
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mmo
      release: production
  template:
    metadata:
      labels:
        app: mmo
        release: production
    spec:
      containers:
        - name: mmo
          image: "cr.k8s.el8.nl/mmo/game:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
              protocol: TCP

          #startupProbe:
          #  httpGet:
          #    path: /health
          #    port: 4000
          #  periodSeconds: 3
          #  failureThreshold: 5

          #livenessProbe:
          #  httpGet:
          #    path: /health
          #    port: 4000
          #  periodSeconds: 10
          #  failureThreshold: 6

          #readinessProbe:
          #  httpGet:
          #    path: /health
          #    port: 4000
          #  periodSeconds: 10
          #  failureThreshold: 1

          resources:
            {}
