kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mmo-game
  namespace: mmo-system
  labels:
    app: mmo
    release: production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
  selector:
    app: mmo
    release: production
